Fix text overflow

--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -24,6 +24,7 @@ body {
 }
 
 .text-container {
+    width: 545px;
     margin-left: 10px;
     display: flex;
     flex-direction: column;
